# infmap2

./: .gitmodules  README.md
image_reader/: CMakeLists.txt  README.md  compile_debug.bat  compile_msvc.bat  compile_release.bat
image_reader/src/: main.cpp
lua/: quadtree.lua
lua/autorun/: !!infmap_init.lua
lua/entities/: infmap.lua  infmap_clone.lua  infmap_heightmap.lua  infmap_heightmap_collider.lua  infmap_lod.lua  infmap_vbsp.lua  infmap_vbsp_client.lua
lua/infmap/: cl_infmap_chunks.lua  cl_infmap_detours.lua  cl_infmap_sampler.lua  sh_infmap_chunks.lua  sh_infmap_functions.lua  sh_infmap_networking.lua  sh_infmap_quadtree.lua  sh_infmap_queue.lua  sh_infmap_sampler.lua  sh_infmap_vector.lua  sv_infmap_chunks.lua  sv_infmap_detours.lua  sv_infmap_functions.lua
lua/infmap/chunks/: cl_infmap_chunks.lua  sh_infmap_chunks.lua  sv_infmap_chunks.lua
lua/infmap/detours/: cl_infmap_detours.lua  sv_infmap_detours.lua
lua/infmap/functions/: sh_infmap_functions.lua  sv_infmap_functions.lua
lua/infmap/helpers/: sh_infmap_functions.lua  sv_infmap_functions.lua
shaders/: common_fxc.h  common_pragmas.h  common_ps_fxc.h  common_vs_fxc.h  single_shader.bat  xalphox_heightmap_ps2x.hlsl  xalphox_heightmap_vs20.hlsl
shaders/fxc/: xalphox_heightmap_ps20b.vcs  xalphox_heightmap_vs20.vcs
